--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -20,7 +20,16 @@
 
             <div class="card-body">
                 <form th:action="@{/save}" method="post"
-                      class="d-flex justify-content-center gap-2 m-2">
+                      class="row g-3">
+
+                    <div class="form-group">
+                        <label for="brand">Marque :</label>
+                        <input id="brand" type="text" name="brand"
+                               class="form-control"
+                               placeholder="Marque" required>
+                        <span th:errors="${article.brand}"
+                              class="text-danger"></span>
+                    </div>
 
                     <div class="form-group">
                         <label for="description">Description :</label>
@@ -38,6 +47,17 @@
                                placeholder="Prix" required>
                         <span th:errors="${article.price}"
                               class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="category">Categorie</label>
+                        <select name="category" id="category"
+                                class="form-control">
+                            <option th:each="category:${listOfCategories}"
+                                    th:value="${category.id}"
+                                    th:text="${category.description}">
+                            </option>
+                        </select>
                     </div>
 
                     <button type="submit" class="btn btn-primary">Ajouter
