--- a/src/main/resources/templates/modifyArticle.html
+++ b/src/main/resources/templates/modifyArticle.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr"
       xmlns:th="http://thymeleaf.org"
+      xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="layout">
 >
 <head>
     <meta charset="UTF-8">
@@ -9,36 +11,59 @@
     <title>Modification d'article</title>
 </head>
 <body>
-<div class="container mt-4">
-    <h2>Modifier l'Article</h2>
+<section layout:fragment="content">
+    <div class="container mt-5">
+        <div class="card">
 
-    <form th:action="@{/modify}" method="post">
-        <input type="hidden" th:field="${article.id}"/>
+            <div class="card-header bg-primary text-white">
+                <h3 class="mb-0">Modifier l'Article</h3>
+            </div>
 
-        <div class="mb-3">
-            <label for="brand" class="form-label">Marque</label>
-            <input type="text" id="brand" th:field="${article.brand}"
-                   class="form-control" required/>
+            <div class="card-body">
+                <form th:action="@{/modify}" method="post" class="row g-3">
+                    <input type="hidden" th:field="${article.id}"/>
+
+                    <div class="form-group">
+                        <label for="brand" class="form-label">Marque</label>
+                        <input type="text" id="brand"
+                               th:field="${article.brand}"
+                               class="form-control" required/>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="description"
+                               class="form-label">Description</label>
+                        <input type="text" id="description"
+                               th:field="${article.description}"
+                               class="form-control" required/>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="price" class="form-label">Prix</label>
+                        <input type="number" id="price"
+                               th:field="${article.price}"
+                               class="form-control" required/>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="category">Categorie</label>
+                        <select name="category" id="category"
+                                class="form-control">
+                            <option th:each="category:${listOfCategories}"
+                                    th:value="${category.id}"
+                                    th:text="${category.description}">
+                            </option>
+                        </select>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary">Enregistrer
+                        les
+                        modifications
+                    </button>
+                </form>
+            </div>
         </div>
-
-        <div class="mb-3">
-            <label for="description" class="form-label">Description</label>
-            <input type="text" id="description"
-                   th:field="${article.description}"
-                   class="form-control" required/>
-        </div>
-
-        <div class="mb-3">
-            <label for="price" class="form-label">Prix</label>
-            <input type="number" id="price" th:field="${article.price}"
-                   class="form-control" required/>
-        </div>
-
-        
-        <button type="submit" class="btn btn-primary">Enregistrer les
-            modifications
-        </button>
-    </form>
-</div>
+    </div>
+</section>
 </body>
 </html>
