worked on the cart

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -22,7 +22,7 @@
                         Article</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Panier</a>
+                    <a class="nav-link" href="#" th:href="@{/cart}">Panier</a>
                 </li>
             </ul>
         </div>
