--- a/src/main/resources/templates/articles.html
+++ b/src/main/resources/templates/articles.html
@@ -59,6 +59,12 @@
                         <td th:text="${article.description}"></td>
                         <td th:text="${article.price}"></td>
                         <td>
+                            <a class="btn btn-success"
+                               th:href="@{/addToCart(id=${article.id})}">Ajouter
+                                au
+                                Panier</a>
+                        </td>
+                        <td>
                             <a class="btn btn-danger"
                                th:href="@{/delete(id=${article.id}, page=${currentPage}, keyword=${keyword})}">Delete</a>
                         </td>
