--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -24,6 +24,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#" th:href="@{/cart}">Panier</a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#" th:href="@{/logout}">Se
+                        deconnecter</a>
+                </li>
             </ul>
         </div>
     </nav>
