--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -26,8 +26,8 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#" th:href="@{/logout}">Se
-                        deconnecter</a>
+                    <a href="#" th:href="@{/logoutConfirm}"
+                       class="btn btn-link nav-link">Se déconnecter</a>
                 </li>
             </ul>
         </div>
