--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr"
       xmlns:th="http://thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security5">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../static/css/bootstrap.min.css"
@@ -17,7 +18,7 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="#" th:href="@{/index}">Accueil</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
                     <a class="nav-link" href="#" th:href="@{/article}">Ajouter
                         Article</a>
                 </li>
@@ -25,7 +26,12 @@
                     <a class="nav-link" href="#" th:href="@{/cart}">Panier</a>
                 </li>
 
-                <li class="nav-item">
+                <li class="nav-item" sec:authorize="!isAuthenticated()">
+                    <a href="#" th:href="@{/login}"
+                       class="btn btn-link nav-link">Se connecter</a>
+                </li>
+
+                <li class="nav-item" sec:authorize="isAuthenticated()">
                     <a href="#" th:href="@{/logoutConfirm}"
                        class="btn btn-link nav-link">Se déconnecter</a>
                 </li>
