added business layer

--- a/src/main/resources/templates/modifyArticle.html
+++ b/src/main/resources/templates/modifyArticle.html
@@ -20,7 +20,7 @@
             </div>
 
             <div class="card-body">
-                <form th:action="@{/modify}" method="post" class="row g-3">
+                <form th:action="@{/save}" method="post" class="row g-3">
                     <input type="hidden" th:field="${article.id}"/>
 
                     <div class="form-group">
